--- a/platform/src/app.html
+++ b/platform/src/app.html
@@ -7,6 +7,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<main class="container">
+		%sveltekit.body%
+		</main>
 	</body>
 </html>
